--- a/BahnClient/Shared/NavMenu.razor
+++ b/BahnClient/Shared/NavMenu.razor
@@ -21,6 +21,9 @@
             <NavLink class="nav-link" href="AddServo">
                 <span class="oi oi-plus" aria-hidden="true"></span> Add Servo
             </NavLink>
+            <NavLink class="nav-link" href="AddSegment">
+                <span class="oi oi-plus" aria-hidden="true"></span> Add Segment
+            </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
@@ -28,6 +31,9 @@
             </NavLink>
             <NavLink class="nav-link" href="ServoList">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> List Servos
+            </NavLink>
+            <NavLink class="nav-link" href="FetchSegment">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> List Segments
             </NavLink>
         </div>
     </nav>
