--- a/BahnClient/Pages/FetchData.razor
+++ b/BahnClient/Pages/FetchData.razor
@@ -63,7 +63,6 @@
         var sw = SwitchController.GetByID(id);
         sw.state = !sw.state;
         await SwitchController.UpdateSWAsync(sw).ConfigureAwait(false);
-        var s = switches.FirstOrDefault(s => s.iD == id);
-        s.state = !sw.state;
+        switches = context.switches.ToList();
     }
 }
